--- a/AEM/src/style.css
+++ b/AEM/src/style.css
@@ -20,21 +20,30 @@
     color: #ffe0ca;
     display: flex;
     justify-content: center;
-    margin: 10px;
-    padding: 10px;
+    margin: 10px 10px 0;
+    padding: 10px 10px 20px;
     border-bottom: 1px solid #ffe0ca;
 }
 
 .aem-content {
     display: flex;
     justify-content: center;
-    margin: 10px;
+    flex-direction: column;
+    margin: 0 10px;
+    padding: 0 10px;
+}
+
+.aem-content_title {
+    display: flex;
+    color: #ffe0ca;
+    padding: 10px 0 0;
 }
 
 .aem-content_button-wrap {
     display: flex;
     width: 100%;
     flex-direction: column;
+    padding: 10px 0;
 }
 
 .aem-content_button {
@@ -50,14 +59,10 @@
     background-color: #ffffff;
     border: 2px solid #ff7619;
     border-radius: 5px;
+    font-weight: 400;
 }
 
 .aem-content_button:hover {
     color: #ffffff;
     background-color: #ff7619;
 }
-/* #241405 */
-
-/* #FF7619 */
-
-/* #FFE0CA */
